--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --fix src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --fix src/*.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "eslint": "^7.12.1",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "jest": "^26.6.2"
   }
 }
