--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@abandonware/noble": "^1.9.2-10",
+    "config": "^3.3.2",
     "log4js": "^6.3.0",
     "node-switchbot": "^0.1.0",
     "wyze-node": "^2.0.3"
