--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --fix src/*.js",
-    "test": "jest src/*"
+    "lint": "eslint . --ext .ts",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watchAll",
+    "build": "tsc",
+    "build:watch": "onchange 'src/**/*.ts' -- npm run build",
+    "view:coverage": "serve coverage/lcov-report",
+    "clean": "rm -rf coverage src/**/*.js src/**/*.map",
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,8 +23,18 @@
     "wyze-node": "^2.0.3"
   },
   "devDependencies": {
-    "eslint": "^7.13.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.10",
+    "@types/source-map-support": "^0.5.3",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "eslint": "^7.14.0",
     "eslint-config-google": "^0.14.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "onchange": "^7.1.0",
+    "serve": "^11.3.2",
+    "source-map-support": "^0.5.19",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.2"
   }
 }
