--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "config": "^3.3.2",
     "log4js": "^6.3.0",
     "node-switchbot": "^0.1.0",
+    "sqlite3": "^5.0.0",
     "wyze-node": "^2.0.3"
   },
   "devDependencies": {
