--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cannabis",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.2.0",
+  "description": "Environment Control System with Switch-Bot and WYZE",
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --fix --ext .ts",
@@ -24,9 +24,11 @@
     "wyze-node": "^2.0.3"
   },
   "devDependencies": {
+    "@types/config": "0.0.37",
     "@types/jest": "^26.0.16",
     "@types/node": "^14.14.10",
     "@types/source-map-support": "^0.5.3",
+    "@types/sqlite3": "^3.1.6",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
