--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cannabis",
-  "version": "0.4.0",
-  "description": "Environment Control System with Switch-Bot and WYZE",
+  "name": "herbert",
+  "version": "0.5.0",
+  "description": "Environment Control System for Switch-Bot and WYZE",
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --fix --ext .ts",
@@ -11,16 +11,22 @@
     "build:watch": "onchange 'src/**/*.ts' -- npm run build",
     "view:coverage": "serve coverage/lcov-report",
     "clean": "rm -rf coverage src/**/*.js src/**/*.map",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "client": "node src/client.js",
+    "server": "node src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@abandonware/noble": "^1.9.2-10",
+    "bufferutil": "^4.0.2",
     "config": "^3.3.3",
+    "express": "^4.17.1",
     "log4js": "^6.3.0",
     "node-switchbot": "^0.1.0",
     "sqlite3": "^5.0.0",
+    "utf-8-validate": "^5.0.3",
+    "ws": "^7.4.1",
     "wyze-node": "^2.0.3"
   },
   "devDependencies": {
@@ -29,6 +35,7 @@
     "@types/node": "^14.14.13",
     "@types/source-map-support": "^0.5.3",
     "@types/sqlite3": "^3.1.6",
+    "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.15.0",
