--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
     "node-switchbot": "^0.1.0",
     "sqlite3": "^5.0.0",
     "utf-8-validate": "^5.0.3",
-    "ws": "^7.4.1",
+    "ws": "^7.4.2",
     "wyze-node": "^2.0.3"
   },
   "devDependencies": {
     "@types/config": "0.0.37",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.13",
+    "@types/node": "^14.14.17",
     "@types/source-map-support": "^0.5.3",
     "@types/sqlite3": "^3.1.6",
     "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "eslint": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.16.0",
     "eslint-config-google": "^0.14.0",
     "jest": "^26.6.3",
     "onchange": "^7.1.0",
