--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "bufferutil": "^4.0.2",
     "config": "^3.3.3",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "log4js": "^6.3.0",
+    "mongoose": "^5.11.12",
     "node-switchbot": "^0.1.0",
+    "redis": "^3.0.2",
     "sqlite3": "^5.0.0",
     "utf-8-validate": "^5.0.3",
     "ws": "^7.4.2",
