--- a/package.json
+++ b/package.json
@@ -1,56 +1,107 @@
 {
   "name": "herbert",
-  "version": "0.5.0",
-  "description": "Environment Control System for Switch-Bot and WYZE",
-  "main": "index.js",
+  "version": "1.0.0",
+  "description": "A Vue.js project for visualization a Herbert.gr installation.",
+  "author": "Terry Lorber",
+  "private": true,
   "scripts": {
-    "lint": "eslint . --fix --ext .ts",
-    "test": "jest --coverage",
-    "test:watch": "jest --coverage --watchAll",
-    "build": "tsc",
+    "build": "node build/build.js",
     "build:watch": "onchange 'src/**/*.ts' -- npm run build",
     "view:coverage": "serve coverage/lcov-report",
     "clean": "rm -rf coverage src/**/*.js src/**/*.map",
-    "start": "node src/index.js",
     "client": "node src/client.js",
-    "client:watch": "onchange 'src/**/*.js' -- npm run client",
     "server": "node src/server.js",
-    "server:watch": "onchange 'src/**/*.js' -- npm run server"
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev",
+    "unit": "jest --config test/unit/jest.conf.js --coverage",
+    "e2e": "node test/e2e/runner.js",
+    "test": "npm run unit && npm run e2e",
+    "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@abandonware/noble": "^1.9.2-10",
-    "bufferutil": "^4.0.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "bufferutil": "^4.0.3",
+    "bulma": "^0.9.2",
     "config": "^3.3.3",
-    "express": "^4.17.1",
-    "lodash": "^4.17.20",
     "log4js": "^6.3.0",
-    "mongoose": "^5.11.12",
-    "node-switchbot": "^0.1.0",
-    "redis": "^3.0.2",
-    "sqlite3": "^5.0.0",
-    "utf-8-validate": "^5.0.3",
-    "ws": "^7.4.2",
+    "node-switchbot": "^1.0.0",
+    "onchange": "^7.1.0",
+    "sqlite3": "^5.0.1",
+    "utf-8-validate": "^5.0.4",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
+    "webpack-node-externals": "^2.5.2",
     "wyze-node": "^2.0.3"
   },
   "devDependencies": {
-    "@types/config": "0.0.37",
-    "@types/express": "^4.17.9",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.17",
-    "@types/source-map-support": "^0.5.3",
-    "@types/sqlite3": "^3.1.6",
-    "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "eslint": "^7.16.0",
-    "eslint-config-google": "^0.14.0",
-    "jest": "^26.6.3",
-    "onchange": "^7.1.0",
-    "serve": "^11.3.2",
-    "source-map-support": "^0.5.19",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
-  }
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^8.2.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-jest": "^21.0.2",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "chalk": "^2.0.1",
+    "chromedriver": "^2.27.2",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-spawn": "^5.0.1",
+    "css-loader": "^0.28.0",
+    "eslint": "^4.15.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.4",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^22.0.4",
+    "jest-serializer-vue": "^0.3.0",
+    "nightwatch": "^0.9.12",
+    "node-notifier": "^5.1.2",
+    "node-sass": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "postcss-url": "^7.2.1",
+    "rimraf": "^2.7.1",
+    "sass-loader": "^10.1.1",
+    "selenium-server": "^3.0.1",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "uglifyjs-webpack-plugin": "^1.1.1",
+    "url-loader": "^0.5.8",
+    "vue-jest": "^1.0.2",
+    "vue-loader": "^13.3.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.5.2",
+    "webpack": "^3.12.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.11.5",
+    "webpack-merge": "^4.2.2"
+  },
+  "engines": {
+    "node": ">= 6.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
