--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@vue/cli": "^4.5.11",
+    "aws-sdk": "^2.834.0",
     "bufferutil": "^4.0.3",
     "bulma": "^0.9.2",
     "config": "^3.3.3",
+    "dns": "^0.2.2",
     "log4js": "^6.3.0",
     "node-switchbot": "^1.0.0",
+    "npm": "^6.14.11",
     "onchange": "^7.1.0",
     "sqlite3": "^5.0.1",
     "utf-8-validate": "^5.0.4",
