--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "sqlite3": "^5.0.1",
     "ws": "^7.4.2"
   },
   "devDependencies": {
@@ -24,10 +25,11 @@
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.17",
     "@types/source-map-support": "^0.5.3",
+    "@types/sqlite3": "^3.1.7",
     "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
-    "eslint": "^7.16.0",
+    "eslint": "^7.19.0",
     "eslint-config-google": "^0.14.0",
     "jest": "^26.6.3",
     "onchange": "^7.1.0",
