--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .DS_Store
+node_modules
+/dist
+
 
 # local env files
 .env.local
@@ -9,14 +12,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-node_modules/
-/dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-/test/unit/coverage/
-/test/e2e/reports/
-selenium-debug.log
 
 # Editor directories and files
 .idea
@@ -26,8 +21,4 @@ selenium-debug.log
 *.njsproj
 *.sln
 *.sw?
-*~
-*.js
-*.map
-*.db
 *~
