--- a/package.json
+++ b/package.json
@@ -8,19 +8,16 @@
   },
   "scripts": {
     "test": "jest",
-    "clean": "rimraf dist",
-    "lint": "eslint 'src/**/*.{ts,vue}'",
-    "start": "node index.js",
-    "start:prod": "NODE_ENV=production node index.js",
-    "type-check-client": "tsc -p ./src/client/tsconfig.json",
-    "build-client": "NODE_ENV=production TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack --mode production",
-    "build-worker": "tsc -b src/worker",
-    "build-server": "tsc -b src/server",
-    "dev-client": "TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack serve",
-    "dev-server": "tsc-watch --noClear -b ./src/server/tsconfig.json --onSuccess \"node --enable-source-maps index.js\"",
-    "dev-worker": "tsc-watch --noClear -b ./src/worker/tsconfig.json --onSuccess \"node --enable-source-maps worker.js\"",
-    "dev": "concurrently --prefix \"[{name}]\" --names \"SERVER,WORKER,CLIENT\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\" \"npm run dev-server\" \"npm run dev-worker\" \"npm run dev-client\"",
-    "build": "concurrently --prefix \"[{name}]\" --names \"SERVER,WORKER,CLIENT\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\" \"npm run build-server\" \"npm run build-worker\" \"npm run build-client\""
+    "clean": "rm -rf dist",
+    "lint": "vue-cli-service lint",
+    "serve:client": "vue-cli-service serve src/client/main.ts",
+    "serve:server": "tsc-watch --noClear -b ./src/server/tsconfig.json --onSuccess \"node --enable-source-maps index.js\"",
+    "serve:worker": "tsc-watch --noClear -b ./src/worker/tsconfig.json --onSuccess \"node --enable-source-maps worker.js\"",
+    "build:client": "vue-cli-service build src/client/main.ts",
+    "build:server": "tsc -b src/server",
+    "build:worker": "tsc -b src/worker",
+    "serve": "concurrently --prefix \"[{name}]\" --names \"SERVER,WORKER,CLIENT\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\" \"npm run serve:server\" \"npm run serve:worker\" \"npm run serve:client\"",
+    "build": "concurrently --prefix \"[{name}]\" --names \"SERVER,WORKER,CLIENT\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\" \"npm run build:server\" \"npm run build:worker\" \"npm run build:client\""
   },
   "repository": {
     "type": "git",
@@ -28,106 +25,42 @@
   },
   "license": "MIT",
   "author": "Terry Lorber",
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "transform": {
-      "^.+\\.ts?$": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.ts?$",
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/client/setupEnzyme.ts"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "json",
-      "node",
-      "vue"
-    ],
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "<rootDir>/src/client/tsconfig-for-tests.json"
-      }
-    }
-  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@webpack-cli/serve": "^1.3.0",
+    "bulma": "^0.9.2",
     "config": "^3.3.3",
-    "dotenv": "^8.2.0",
+    "core-js": "^3.6.5",
     "express": "^4.17.1",
-    "find-up": "^5.0.0",
     "log4js": "^6.3.0",
     "node-switchbot": "^1.0.0",
-    "rimraf": "^3.0.2",
     "sqlite3": "^5.0.1",
     "tslib": "^2.1.0",
-    "vue": "^2.6.12",
-    "ws": "^7.4.2",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^9.1.2",
+    "ws": "^7.4.3",
     "wyze-node": "^2.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.13",
-    "@babel/core": "^7.12.13",
-    "@babel/plugin-proposal-decorators": "^7.12.13",
-    "@babel/plugin-transform-runtime": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@babel/preset-typescript": "^7.12.13",
-    "@types/express": "^4.17.9",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.25",
-    "@types/source-map-support": "^0.5.3",
-    "@types/sqlite3": "^3.1.7",
-    "@types/webpack-dev-server": "^3.11.1",
-    "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "autoprefixer": "^10.2.4",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
     "concurrently": "^5.3.0",
-    "css-loader": "^5.0.1",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.19.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.5.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0",
-    "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.3.5",
-    "postcss": "^8.2.4",
-    "postcss-loader": "^5.0.0",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.6",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^6.2.2",
+    "prettier": "^1.19.1",
     "sass-loader": "^10.1.1",
-    "scss-loader": "0.0.1",
-    "serve": "^11.3.2",
-    "source-map-support": "^0.5.19",
-    "style-loader": "^2.0.0",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.14",
-    "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.1.3",
-    "vue-class-component": "^7.2.6",
-    "vue-loader": "^15.9.6",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.20.1",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-manifest-plugin": "^3.0.0"
-  },
-  "_moduleAliases": {
-    "@/": "./src/"
+    "typescript": "~3.9.3",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.46.0"
   }
 }
