--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
+    "target": "es5",
+    "module": "es2015",
     "strict": true,
-    "strictFunctionTypes": false,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
