--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "concurrently": "^5.3.0",
+    "css-loader": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "html-webpack-plugin": "^5.0.0",
+    "node-sass": "^5.0.0",
     "prettier": "^1.19.1",
     "sass-loader": "^10.1.1",
     "tsc-watch": "^4.2.9",
