--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "clean": "rm -rf dist",
     "lint": "vue-cli-service lint",
     "serve:client": "vue-cli-service serve src/client/main.ts",
-    "serve:server": "tsc-watch --noClear -b ./src/server/tsconfig.json --onSuccess \"node --enable-source-maps index.js\"",
+    "serve:server": "tsc-watch --noClear -b ./src/server/tsconfig.json --onSuccess \"node --enable-source-maps server.js\"",
     "serve:worker": "tsc-watch --noClear -b ./src/worker/tsconfig.json --onSuccess \"node --enable-source-maps worker.js\"",
+    "start": "node index.js",
     "build:client": "vue-cli-service build src/client/main.ts",
     "build:server": "tsc -b src/server",
     "build:worker": "tsc -b src/worker",
