--- a/package.json
+++ b/package.json
@@ -31,8 +31,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "bulma": "^0.9.2",
+    "chart.js": "^2.9.4",
+    "chartjs-adapter-date-fns": "^1.0.0",
     "config": "^3.3.3",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "date-fns": "^2.17.0",
+    "date-fns-timezone": "^0.1.4",
     "express": "^4.17.1",
     "log4js": "^6.3.0",
     "node-switchbot": "^1.0.0",
@@ -41,6 +46,7 @@
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.5.1",
     "ws": "^7.4.3",
     "wyze-node": "^2.0.3"
   },
