--- a/src/worker/tsconfig.json
+++ b/src/worker/tsconfig.json
@@ -11,7 +11,7 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "skipLibCheck": true,
-    "outDir": "../../dist/worker",
+    "outDir": "../../worker",
     "lib": ["ES2019"],
     "moduleResolution": "node",
     "types": ["node"],
