--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "log4js": "^6.3.0",
     "node-switchbot": "^1.0.0",
     "postgres": "^1.0.2",
+    "sqlite3": "^5.0.1",
     "tslib": "^2.1.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
