--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
     "chart.js": "^2.9.4",
     "chartjs-adapter-date-fns": "^1.0.0",
@@ -41,7 +42,7 @@
     "express": "^4.17.1",
     "log4js": "^6.3.0",
     "node-switchbot": "^1.0.0",
-    "sqlite3": "^5.0.1",
+    "pg": "^8.5.1",
     "tslib": "^2.1.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
