--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
     "chart.js": "^2.9.4",
@@ -43,6 +44,7 @@
     "express-promise-router": "^4.0.1",
     "log4js": "^6.3.0",
     "node-switchbot": "^1.0.0",
+    "onoff": "^6.0.1",
     "pg": "^8.5.1",
     "serve-favicon": "^2.5.0",
     "tslib": "^2.1.0",
@@ -50,6 +52,7 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
+    "vuex": "^3.6.2",
     "ws": "^7.4.3",
     "wyze-node": "^2.0.3"
   },
