--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.17.0",
     "date-fns-timezone": "^0.1.4",
+    "date-fns-tz": "^1.1.3",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
     "log4js": "^6.3.0",
