--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@types/node": "^14.14.41",
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.2",
