--- a/src/shared/tsconfig.json
+++ b/src/shared/tsconfig.json
@@ -1,16 +1,8 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "ES2019",
-    "moduleResolution": "node",
-    "module": "commonjs",      
-    "esModuleInterop": true,
-    "declaration": true,
-    "sourceMap": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
-    "outDir": "../../shared",
-    "lib": ["ES2019"],
+    "outDir": "../../dist/shared",
     "composite": true
   },
   "include": ["./**/*.ts"],
