--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,9 @@ services:
     image: herbert_node:latest
     build: .
     command: npm run serve:client
+    environment:
+      VUE_APP_API_URL: http://localhost:5000
+      VUE_APP_WS_URL: ws://localhost:5000
     volumes:
       - ./src:/app/src
       - ./config:/app/config
