--- a/ci/ansible/worker.yml
+++ b/ci/ansible/worker.yml
@@ -3,8 +3,9 @@
 
   vars:
     - homeDir: "/home/{{ansible_user}}"
-    - nodejs_version: "14.x"
     - appDir: "{{homeDir}}/herbert"
+    - nodejs_version: "14.x"
+    - nodejs_package_json_path: "{{appDir}}"
     - service_description: "Herbert in-room worker service"
     - service_user: root
     - service_file: dist/worker/main.js
@@ -39,19 +40,9 @@
         src: ../../../herbert
         dest: "{{homeDir}}"
 
-    - name: Sync configs
-      become: no
-      synchronize:
-        src: "{{config_path}}"
-        dest: "{{appDir}}/config"
-
     - name: Install nodejs {{nodejs_version}} and node_modules
       include_role:
         name: geerlingguy.nodejs
-
-    - name: Running NPM install
-      become: no
-      command: "chdir={{appDir}} npm i"
 
     - name: Build worker
       become: no
