--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "14.16.1"
   },
   "scripts": {
-    "test": "NODE_ENV=unit_test jest",
+    "test": "NODE_ENV=unit_test WS_URL=ws://localhost:5000 jest",
     "clean": "rm -rf dist",
     "lint": "vue-cli-service lint",
     "serve:client": "vue-cli-service serve src/client/main.ts",
