Fix deployment bugs
- Fix wrong var name in re-image script
- Set elevated privileges for appropriate tasks in ansible configs

--- a/ci/ansible/client.yml
+++ b/ci/ansible/client.yml
@@ -42,6 +42,8 @@
     - name: Install nodejs {{nodejs_version}}
       include_role:
         name: geerlingguy.nodejs
+        apply:
+          become: yes
 
     - name: Install production node_modules
       command: npm install
