--- a/ci/ansible/server.yml
+++ b/ci/ansible/server.yml
@@ -60,6 +60,8 @@
     - name: Install nodejs {{nodejs_version}}
       include_role:
         name: geerlingguy.nodejs
+        apply:
+          become: yes
 
     - name: Install production node_modules
       command: npm install
