--- a/ci/ansible/inventory.sample
+++ b/ci/ansible/inventory.sample
@@ -27,15 +27,29 @@ dbname="{{ hostvars[groups['databases'][0]].dbname }}"
 dbhost="{{ groups['databases'][0] }}"
 dburl="postgresql://{{ dbuser }}:{{ dbpass }}@{{ dbhost }}:5432/{{ dbname }}"
 api_port=5000
-ws_port=5000
+wss_host="{{ groups['socket-servers'][0] }}"
+wss_port="{{ hostvars[groups['socket-servers'][0]].wss_port }}"
+wss_url="ws://{{ wss_host }}:{{ wss_port }}"
+
+[socket-servers]
+<add_socket_servers>
+
+[socket-servers:vars]
+wss_port=2929
+api_host="{{ groups['servers'][0] }}"
+api_port="{{ hostvars[groups['servers'][0]].api_port }}"
+api_url="http://{{ api_host }}:{{ api_port }}"
 
 [clients]
 <add_client_hosts>
+
+[clients:vars]
+client_port=8080
 
 [workers]
 <add_worker_hosts>
 
 [workers:vars]
-server_host="{{ groups['servers'][0] }}"
-ws_port="{{ hostvars[groups['servers'][0]].ws_port }}"
-ws_url="ws://{{ server_host }}:{{ ws_port }}"
+wss_host="{{ groups['socket-servers'][0] }}"
+wss_port="{{ hostvars[groups['socket-servers'][0]].wss_port }}"
+wss_url="ws://{{ wss_host }}:{{ wss_port }}"
