--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "node": "14.16.1"
   },
   "scripts": {
-    "test": "NODE_ENV=unit_test WS_URL=ws://localhost:5000 jest",
+    "test": "NODE_ENV=unit_test WSS_URL=ws://localhost:5000 jest",
     "clean": "rm -rf dist",
     "lint": "vue-cli-service lint",
     "serve:client": "vue-cli-service serve src/client/main.ts",
     "serve:server": "tsc-watch --noClear -b ./src/server/tsconfig.json --onSuccess \"node --enable-source-maps dist/server/main.js\"",
+    "serve:socket-server": "tsc-watch --noClear -b ./src/socket-server/tsconfig.json --onSuccess \"node --enable-source-maps dist/socket-server/main.js\"",
     "serve:worker": "tsc-watch --noClear -b ./src/worker/tsconfig.json --onSuccess \"node --enable-source-maps dist/worker/main.js\"",
     "start": "node index.js",
     "copy:favicon": "cp src/server/favicon.ico dist/server/",
     "build:client": "vue-cli-service build src/client/main.ts",
     "build:server": "tsc -b src/server && npm run copy:favicon",
+    "build:socket-server": "tsc -b src/socket-server",
     "build:worker": "tsc -b src/worker",
-    "serve": "concurrently --prefix \"[{name}]\" --names \"CLIENT,SERVER,WORKER\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\"  \"npm run serve:client\" \"npm run serve:server\" \"npm run serve:worker\"",
-    "build": "concurrently --prefix \"[{name}]\" --names \"CLIENT,SERVER,WORKER\" -c \"bgBlue.bold,bgGreen.bold,bgRed.bold\"  \"npm run build:client\" \"npm run build:server\" \"npm run build:worker\""
+    "serve": "concurrently --prefix \"[{name}]\" --names \"CLIENT,SERVER,SOCKET,WORKER\" -c \"bgBlue.bold,bgGreen.bold,bgCyan.bold,bgRed.bold\"  \"npm run serve:client\" \"npm run serve:server\" \"npm run serve:socket-server\" \"npm run serve:worker\"",
+    "build": "concurrently --prefix \"[{name}]\" --names \"CLIENT,SERVER,SOCKET,WORKER\" -c \"bgBlue.bold,bgGreen.bold,bgCyan.bold,bgRed.bold\"  \"npm run build:client\" \"npm run build:server\" \"npm run build:socket-server\" \"npm run build:worker\""
   },
   "repository": {
     "type": "git",
