--- a/ci/ansible/server.yml
+++ b/ci/ansible/server.yml
@@ -9,12 +9,10 @@
   tasks:
     - name: Install System Dependencies
       become: yes
-      apt: name={{ item }} update_cache=yes state=latest
-      with_items:
-        - git
-        - gcc
-        - g++
-        - make
+      apt:
+        update_cache: yes
+        state: latest
+        name: [ 'git', 'gcc', 'g++', 'make' ]
 
     - name: Create {{ appDir }}
       file:
