--- a/ci/ansible/worker.yml
+++ b/ci/ansible/worker.yml
@@ -9,16 +9,10 @@
   tasks:
     - name: Install System Dependencies
       become: yes
-      apt: name={{ item }} update_cache=yes state=latest
-      with_items:
-        - bluetooth
-        - bluez
-        - libbluetooth-dev
-        - libudev-dev
-        - git
-        - gcc
-        - g++
-        - make
+      apt:
+        update_cache: yes
+        state: latest
+        name: ['bluetooth', 'bluez', 'libbluetooth-dev', 'libudev-dev', 'git', 'gcc', 'g++', 'make']
 
     - name: Create {{ appDir }}
       file:
