--- a/ci/ansible/server.yml
+++ b/ci/ansible/server.yml
@@ -84,3 +84,9 @@
         state: restarted
         daemon_reload: yes
         enabled: yes
+
+    - name: Create .bash_aliases
+      copy:
+        dest: /home/{{ ansible_user }}/.bash_aliases
+        content: |
+          alias tail-server='sudo journalctl -u herbert-server -f'
