--- a/ci/ansible/socket-server.yml
+++ b/ci/ansible/socket-server.yml
@@ -84,3 +84,9 @@
         state: restarted
         daemon_reload: yes
         enabled: yes
+
+    - name: Create .bash_aliases
+      copy:
+        dest: /home/{{ ansible_user }}/.bash_aliases
+        content: |
+          alias tail-socket='sudo journalctl -u herbert-socket -f'
