--- a/scripts/AKB73016012.licrd.conf
+++ b/scripts/AKB73016012.licrd.conf
@@ -23,7 +23,77 @@ begin remote
       628     1596      626      485      625     1600
       622     1602      631     1596      627     1595
       626     1598      624     1600      622      489
-      621    
+      621
+
+    name TEMP_DN
+      8973     4414      617     1603      629      482
+      627      484      626      485      625      486
+      623      488      622      489      621     1604
+      629      482      627     1597      624     1600
+      621      490      620      491      629     1599
+      622     1598      623      488      622      489
+      621     1603      628      483      627     1598
+      623      487      623      488      621      490
+      630     1594      628     1596      625      487
+      623     1601      620      490      630     1594
+      627     1597      625     1604      618      489
+      621
+
+    name TEMP_UP
+      8960     4414      623     1599      621      490
+      630      480      629      486      623      483
+      626      485      625      486      623     1599
+      620      490      630     1592      627     1597
+      623      485      623      487      622     1600
+      630     1592      627      483      626     1601
+      618      488      621     1601      629      481
+      628      483      626      484      625      486
+      623     1600      620      489      630     1592
+      627      483      626     1597      622     1603
+      629     1592      626     1594      625      486
+      623
+
+    name FAN_SPEED
+      8962     4413      626     1595      624      486
+      623      488      622      489      631      479
+      629      481      627      483      626     1597
+      623      488      622     1602      629     1595
+      625      484      625      486      624     1599
+      621     1602      628      482      627     1602
+      619      486      654      457      621     1602
+      629     1594      626      485      625      486
+      624     1599      621      490      630     1593
+      627     1596      624      487      622      488
+      625     1600      627     1594      626      485
+      624
+
+    name TIMER
+      8978     4403      622     1601      631      480
+      629      485      625      483      626      485
+      624      486      623      488      632     1592
+      628      482      627     1600      627     1593
+      630      479      630      481      628     1596
+      625     1599      626      485      631     1592
+      628     1595      625     1598      623     1601
+      632     1592      626      484      626      485
+      624     1601      620      496      624      480
+      628      483      629      491      617      486
+      624     1600      631     1592      629      482
+      628
       
+    name MODE
+      8977     4407      620     1603      628      483
+      627      484      626      488      622      487
+      623      489      621      490      631     1593
+      628      483      626     1598      623     1604
+      628      480      630      481      628     1596
+      625     1599      622      489      621     1608
+      624     1595      626      485      625     1599
+      622     1602      630      483      627      483
+      626     1598      624      488      622      489
+      621     1603      628      483      627      485
+      625     1599      621     1601      631      480
+      629
+
   end raw_codes
 end remote
