Added COOL, DEHUM, FAN

--- a/scripts/810900812A.licrd.conf
+++ b/scripts/810900812A.licrd.conf
@@ -132,45 +132,125 @@ begin remote
       468      359      467     1170      464     1174
       474
 
-    name C
-3099     1598      464     1174      471     1168
-      466      362      465      364      463      368
-      459     1177      468      361      466      362
-      465     1173      472     1167      467      361
-      466     1173      472      358      470      356
-      469     1168      465     1173      471      357
-      470     1168      466     1172      472      357
-      470      363      463     1170      464      364
-      462      365      472     1167      467      361
-      466      363      464      364      462      366
-      471      357      469      359      467      361
-      466      362      465      363      463      365
-      472      356      470      358      469      360
-      467      361      466      363      464      364
-      462      365      472     1168      466      361
-      466      363      463     1174      471      358
-      469      359      468     1170      464     1174
-      470      358      473      356      467      361
-      465      363      464      364      462      365
-      472     1167      467      360      466     1172
-      462      366      471      357      469      359
-      468      360      466      362      465      363
-      464      365      462      365      472     1166
-      468     1170      464     1174      471      358
-      468      363      463      362      464      362
+    name DEHUM
+3101     1592      471     1166      469     1170
+      465      363      463      368      459      366
+      472     1167      468      361      466      362
+      466     1173      462     1177      469      359
+      468     1173      461      364      463      365
+      462     1176      469     1169      465      362
+      465     1173      462     1176      469      360
+      470      361      464     1172      463      364
+      495      332      472     1166      469      360
+      467      361      466      362      465      363
+      495      334      501      327      492      336
+      491      337      469      360      499      329
+      467      361      497      331      495      333
+      494      334      493      335      492      337
+      501      327      501     1137      496      334
+      463      364      494     1144      502      325
+      499      329      498      333      495     1140
+      493      335      492      337      490      338
+      499      328      498      331      498      329
+      496      332      495      333      494      334
+      493     1145      500      328      499      330
+      499      330      496      332      495      334
+      494      335      492      336      491     1146
+      499     1139      496     1142      492      336
+      501      327      500      328      499      330
+      497      331      495      333      494      334
+      493      336      491      337      500      328
+      499      330      497      331      496      333
+      495      346      482      335      492      336
+      490      338      501      327      500      328
+      497      331      495      333      494      334
+      493      336      491      337      500      328
+      499      330      498     1139      495     1143
+      492      336      491     1147      498      331
+      497      331      496     1142      493     1149
+      496      328      499     1139      495     1143
+      492      337      501      328      499      328
+      499     1139      495      333      495
+      
+    name FAN
+     3103     1594      470     1170      465     1171
+      464      365      462      366      472      356
+      471     1167      468      360      467      361
+      467     1171      464     1174      471      356
+      471     1167      467      361      467      361
+      466     1172      463     1175      470      357
+      470     1169      466     1173      462      366
+      458      368      462     1178      467      358
+      467      360      467     1171      464      364
+      463      365      472      356      471      357
+      470      359      468      360      467      361
+      466      362      465      364      463      364
+      465      363      472      356      471      357
+      471      358      467      360      467      361
+      466      361      465     1173      462      366
+      472      356      471     1167      468      360
+      466      361      473     1172      457     1177
+      467     1166      467      359      465      362
+      465      364      464      365      462      366
+      471      357      470      360      468      359
+      468     1171      464      364      463      366
+      472      356      471      357      470      358
+      469     1169      465      362      465     1178
+      457     1175      469     1169      466      363
+      464      364      463      366      472      356
+      471      358      470      359      467      373
+      458      358      466      363      463      312
+      525      356      471      357      470      358
+      468      360      467      361      466      363
+      464      365      463      366      472      365
+      464      356      469      360      467      361
+      466      362      465      363      464      365
+      462      365      472     1166      469     1170
+      465      364      463     1174      471      358
+      469      358      469     1169      465     1173
+      462     1176      469      359      468     1173
+      462     1175      470      356      470      357
+      470     1169      466      363      465
+      
+    name COOL
+3097     1598      465     1172      463     1176
+      470      358      468      360      467      360
+      467     1174      460      365      462      365
+      462     1176      470     1169      466      362
+      465     1173      472      356      471      356
+      471     1170      472     1163      467      364
+      465     1169      473     1166      467      361
+      466      361      466     1177      458      366
+      472      356      472     1166      468      360
+      467      361      466      362      465      363
       464      364      463      365      472      356
-      470      358      469      359      467      361
-      466      363      464      364      463      365
-      471      356      470      358      469      359
-      467      361      466      362      464      364
-      463      365      472      356      470      358
-      469      359      467      361      469      359
-      464      364      464      365      472      356
-      476      353      469      359      476      366
-      451      361      465      362      463      364
-      463     1176      468      360      467      360
-      467     1171      461     1173      471     1167
-      473     1165      463      364      462
+      471      359      469      358      469      359
+      468      360      467      361      466      362
+      465      363      464      364      463      366
+      472      355      472     1166      470      360
+      467      359      467     1172      463      364
+      462      367      462     1174      470     1168
+      467      361      466      362      465      367
+      460      364      463      366      472      356
+      472     1166      469     1168      466     1171
+      463      365      462      366      472      356
+      472      356      469      358      469      359
+      468      360      467      360      467     1170
+      464     1173      472     1166      468      360
+      468      360      468      360      471      358
+      464      363      464      382      457      354
+      471      356      471      357      470      358
+      469      359      468      360      467      361
+      470      358      465      363      464      364
+      463      366      472      356      471      357
+      470      358      469      359      468      360
+      467      361      466      362      465      363
+      465      363      462      366      472      356
+      471     1166      468     1170      465      363
+      464      364      463     1174      472     1166
+      469     1170      466     1170      463     1177
+      470      357      470      358      469      359
+      468     1170      465      368      459
 
     name UP
     3103     1594      468     1171      463     1177
@@ -372,7 +452,7 @@ begin remote
       469      359      468      307      519     1172
       462      365      472     1166      468
 
-    name FAN
+    name FAN_SETTING
      3100     1599      464     1173      472     1167
       467      361      466      363      464      363
       463     1175      469      359      468      359
