expected POWER_ON and POWER_OFF

--- a/scripts/AKB73016012.licrd.conf
+++ b/scripts/AKB73016012.licrd.conf
@@ -11,7 +11,21 @@ begin remote
 
   begin raw_codes
 
-    name POWER
+    name POWER_ON
+     8968     4414      629     1599      623      484
+      626      485      625      487      624      487
+      623      489      622      490      621     1604
+      629      483      628     1598      623     1598
+      624      487      622      489      621     1603
+      629     1600      622      484      626     1598
+      624      488      623      489      621      490
+      621      491      630      482      628      482
+      628     1596      626      485      625     1600
+      622     1602      631     1596      627     1595
+      626     1598      624     1600      622      489
+      621
+
+    name POWER_OFF
      8968     4414      629     1599      623      484
       626      485      625      487      624      487
       623      489      622      490      621     1604
