Fixes #89 creates a standalone node.js process for the controller Fixes #72 adds profile config to zone model Fixes #80 with a star schema for meter facts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,21 @@ services:
     depends_on:
       - api
 
+  controller:
+    image: herbert_controller:latest
+    build:
+      context: .
+      target: controller
+    environment:
+      API_URL: http://api:5000
+      WSS_URL: ws://socket_server:2929
+    volumes:
+      - ./src:/app/src
+      - ./config:/app/config
+    depends_on:
+      - api
+      - socket_server
+      
   client:
     image: herbert_client:latest
     build:
