Fixes #90 creates a meter reference for OpenWeather API data Fixes #80 with star schema for device statuses

--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
 VUE_APP_API_URL=http://localhost:5000
-VUE_APP_WS_URL=ws://localhost:2929
-WSS_URL=ws://localhost:2929
-WS_URL=ws://localhost:2929
+VUE_APP_WSS_URL=ws://localhost:2929
